updated likedBy and sharedBy reference in templates page

--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -45,7 +45,7 @@
           </div>
 
           <div class="info">
-            <i class="fa fa-lg fa-user"></i> {{flow.resource.sharedBy.length}}
+            <i class="fa fa-lg fa-user"></i> {{flow.sharedBy.length}}
           </div>
         </div>
 
