--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -1,66 +1,31 @@
+
 <div class="design2 designer-container" tutorial>
   <flow-editor flow="activeFlow"></flow-editor>
-  <div class="sidebar">
-    <div class="sidebar-pane inspector">
-      <div class="sidebar-toolbar">
-        <a href="#"></a>
-        <a href="#"></a>
-        <a href="#"></a>
-      </div>
-      <div class="sidebar-body"></div>
-    </div>
 
-    <div class="sidebar-pane browser">
-      <header class="sidebar-toolbar toolbar">
-        <button class="toolbar-button toolbar-button--active" ng-click="toggleActiveTab('flows')" ng-class="{'active' : activeFlow.browserTab.name === 'flows'}" title="Flows">
-            <i class="fa fa-money fa-lg"></i>
-        </button>
-        <button class="toolbar-button" ng-click="toggleActiveTab('operators')" ng-class="{'active' : activeFlow.browserTab.name === 'operators'}" title="Operator Nodes" >
-            <i class="fa fa-plug fa-lg"></i>
-        </button>
-        <button class="toolbar-button" ng-click="toggleActiveTab('nodes')" ng-class="{'active' : activeFlow.browserTab.name === 'nodes'}" title="Configured Nodes" >
-          <i class="fa fa-code-fork fa-lg"></i>
-        </button>
-        <button class="toolbar-button" ng-click="toggleActiveTab('unconfigurednodes')" ng-class="{'active' : activeFlow.browserTab.name === 'unconfigurednodes'}" title="Available Nodes" >
-          <i class="fa fa-plus-circle fa-lg"></i>
-        </button>
-        <button class="toolbar-button" ng-click="toggleActiveTab('debug')" ng-class="{'active' : activeFlow.browserTab.name === 'debug'}" title="Debug">
-          <i class="fa fa-bug fa-lg"></i>
-        </button>
-      </header>
-
-
-      <ol class="sidebar-body">
-        <li class="collection__item collection__item--detail">
-          <img src="" alt="" class="collection__item-image">
-          <div class="collection__item-header"></div>
-          <p class="collection__item-body"></p>
-        </li>
-
-        <li class="collection__item collection__item--thumbnail">
-          <img src="" alt="" class="collection__item-image">
-        </li>
-      </ol>
-
-      <footer class="sidebar-toolbar sidebar-toolbar--footer">
-        <button class="toolbar-button"><i class="fa fa-th fa-lg"></i></button>
-
-        <form action="" class="collection-browser__filter-form">
-          <i class="fa fa-search fa-lg collection-browser__filter-icon"></i>
-          <input class="collection-browser__filter-input" type="search" name="Filter" placeholder="Filter...">
-        </form>
-      </footer>
-
-    </div>
-
+  <div class="logo-toolbar">
+    <img src="/assets/images/octoblu.png" height="50px"/>
   </div>
 
 
-<!--   <div class="logo-toolbar"> Defined first so its on the bottom layer
-  <img src="/assets/images/octoblu.png" height="50px"/>
-</div> -->
+  <div class="sidebar">
 
-<!--   <md-toolbar class="flow-top-bar">
+    <flow-inspector flow="activeFlow"></flow-inspector>
+
+    <collection-browser></collection-browser>
+  </div>
+
+
+
+  <style>
+    .container-fluid #intercom-container .intercom-launcher {
+      bottom: 155px;
+      right: 2px;
+    }
+  </style>
+</div>
+
+<!--
+<md-toolbar class="flow-top-bar">
   <div class="md-toolbar-tools">
     <h2 class="page-heading">
       <a href class="menu-icon" ng-click="toggleNav()">
@@ -131,28 +96,22 @@
   <!-- <div style="z-index: 0;" class="workspace-container" w-mousetrap="{'mod+c':copySelection, 'mod+x': cutSelection, 'mod+v':pasteSelection, 'backspace': deleteSelection, 'del': deleteSelection, 'mod+z':undoEdit, 'mod+y':redoEdit}" ng-mousemove="setMousePosition($event)" ng-mouseout="clearMousePosition()">
   </div> -->
 
-<!--   <div class="zoom-controls" flex layout="column" ng-class="{'browser-maximized' : activeFlow.browserMaximized}">
-      <button class="btn btn-default btn-sm" ng-click="center()">
-        <i class="fa fa-crosshairs fa-lg"></i>
-      </button>
-      <md-divider></md-divider>
+<!--
+<div class="zoom-controls" flex layout="column" ng-class="{'browser-maximized' : activeFlow.browserMaximized}">
+  <button class="btn btn-default btn-sm" ng-click="center()">
+    <i class="fa fa-crosshairs fa-lg"></i>
+  </button>
+  <md-divider></md-divider>
 
-      <button class="btn btn-default btn-sm" ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}">
-        <i class="fa fa-plus fa-lg"></i>
-      </button>
+  <button class="btn btn-default btn-sm" ng-click="zoomIn()" w-mousetrap="{'+' : zoomIn, '=' : zoomIn}">
+    <i class="fa fa-plus fa-lg"></i>
+  </button>
 
-      <button class="btn btn-default btn-sm" ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}">
-        <i class="fa fa-minus fa-lg"></i>
-      </button>
+  <button class="btn btn-default btn-sm" ng-click="zoomOut()" w-mousetrap="{'-' : zoomOut, '_' : zoomOut}">
+    <i class="fa fa-minus fa-lg"></i>
+  </button>
 </div>
 <flow-browser flex debug-lines="debugLines" node-types="nodeTypes" flow-node-types="flowNodeTypes" active-flow="activeFlow"></flow-browser>
 <flow-node-editor flow-id="activeFlow.flowId" flow-node="activeFlow.selectedFlowNode"></flow-node-editor>
 <flow-node-setup  node-type="activeFlow.selectedFlowNode"></flow-node-setup>
  -->
-  <style>
-    .container-fluid #intercom-container .intercom-launcher {
-      bottom: 155px;
-      right: 2px;
-    }
-  </style>
-</div>
