--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -15,23 +15,10 @@
         <h3 class="name">
           {{flow.name}}
         </h3>
-        <div class="actions">
-          <md-button aria-label="Delete Template" class="action md-icon-button" ng-click="confirmDeleteTemplate(flow.uuid)">
-            <md-tooltip>Delete</md-tooltip>
-            <md-icon md-font-icon="fa fa-lg fa-trash"></md-icon>
-          </md-button>
-          <md-button ng-click="togglePublic(flow)" ng-class="{public: flow.public}" aria-label="Make Template Public" class="action md-icon-button">
-            <md-tooltip>Public</md-tooltip>
-            <md-icon md-font-icon="fa fa-lg fa-globe"></md-icon>
-          </md-button>
-          <md-button aria-label="Import Template" class="action md-icon-button" ng-click="importFlow(flow.uuid)">
-            <md-tooltip>Import</md-tooltip>
-            <md-icon md-font-icon="fa fa-lg fa-plus"></md-icon>
-          </md-button>
-          <md-button aria-label="Copy Template Link" class="action md-icon-button" clip-click-fallback="dialogTemplateUrl(currentTemplate.url)" clip-copy="currentTemplate.url" clip-click="toastTemplateUrl(currentTemplate.url)">
-            <md-tooltip>Copy</md-tooltip>
-            <md-icon md-font-icon="fa fa-lg fa-copy"></md-icon>
-          </md-button>
+        <div class="info-group">
+          <div class="info">
+            <i class="fa fa-lg fa-globe" ng-show="flow.public"></i>
+          </div>
         </div>
       </div>
 
