only show liked/shared count icons when it exists on the template

--- a/public/pages/template-browse.html
+++ b/public/pages/template-browse.html
@@ -70,10 +70,9 @@
               <a href="#" ng-repeat="tag in flow.tags" class="tag">{{tag}}</a>
             </div>
           </div>
-
           <div class="footer">
             <div class="info-group">
-              <div class="info" ng-class="{liked: controller.liked(flow)}">
+              <div class="info">
                 <i class="fa fa-lg fa-heart"></i> {{flow.likedBy.length}}
               </div>
 
