--- a/public/pages/node-wizard/add-subdevice/select-gateblu.html
+++ b/public/pages/node-wizard/add-subdevice/select-gateblu.html
@@ -15,7 +15,7 @@
   </div>
   <div class="col-xs-6 col-sm-4 col-md-3 col-lg-2 col-centered">
     <h4 class="text-center">
-      <a href ui-sref="material.nodewizard.addsubdevice.addGateblu" class="">
+      <a href ui-sref="material.nodewizard.addsubdevice.addgateblu" class="">
         <div title="{{gateblu.name}}" class="ghost-thumbnail animated-popout">
           <div>
             <i class="fa fa-2x fa-plus"></i>
