--- a/public/pages/node-wizard/add-subdevice/index.html
+++ b/public/pages/node-wizard/add-subdevice/index.html
@@ -1,20 +1,7 @@
 <h2 class="text-center">Add a {{nodeType.name}}</h2>
 
-<br>
-
-<div class="row">
-  <div class="col-xs-12 col-md-offset-4 col-md-4">
-    <div ng-style="{'background-image': 'url('+nodeType.logo+')'}" class="node-thumbnail"></div>
-  </div>
+<div class="node-wizard-logo-container">
+  <img ng-src="{{nodeType.logo}}" width="100%" height="100%">
 </div>
 
-<br>
-<br>
-
-<div ui-view></div>
-
-<br>
-<br>
-<br>
-<br>
-<br>
+<ui-view></ui-view>
