--- a/public/pages/flow-blueprint-editor.html
+++ b/public/pages/flow-blueprint-editor.html
@@ -1,29 +1,29 @@
 <div class="flow-blueprint-editor">
   <div class="header">
-    <h3 class="name">
-      <md-input-container>
+  </div>
+  <div  class="content">
+    <div class="properties-editor">
+      <md-input-container class="name">
         <label>Name</label>
         <input required ng-model="flow.name">
       </md-input-container>
-    </h3>
+
+      <md-input-container class="description">
+        <label>Description</label>
+        <input ng-model="flow.description">
+      </md-input-container>
+
+      <div class="tags">
+        <a href="#" ng-repeat="tag in flow.tags" class="tag">{{tag}}</a>
+      </div>
+    </div>
     <div class="actions">
-      <md-button class="action md-icon-button" ng-click="confirmDeleteTemplate(flow.uuid)" aria-label="Delete Template">
+      <md-button class="action md-icon-button" ng-click="confirmDeleteTemplate(flow.uuid)" aria-label="Delete">
         <md-icon md-font-icon="fa fa-lg fa-trash"></md-icon>
       </md-button>
-      <md-button class="action md-icon-button" ng-click="importFlow(flow.uuid)" aria-label="Import Template">
+      <md-button class="action md-icon-button" ng-click="importFlow(flow.uuid)" aria-label="Import">
         <md-icon md-font-icon="fa fa-lg fa-plus"></md-icon>
       </md-button>
-    </div>
-  </div>
-
-  <div class="content">
-    <md-input-container class="description">
-      <label>Description</label>
-      <input ng-model="flow.description">
-    </md-input-container>
-
-    <div class="tags">
-      <a href="#" ng-repeat="tag in flow.tags" class="tag">{{tag}}</a>
     </div>
   </div>
 
