--- a/public/pages/flow-blueprint-editor.html
+++ b/public/pages/flow-blueprint-editor.html
@@ -1,5 +1,23 @@
 <div class="flow-blueprint-editor">
   <div class="header">
+    <h3 class="name">{{flow.name}}</h3>
+    <div class="actions">
+      <md-button class="action md-icon-button" ng-click="confirmDeleteTemplate(flow.uuid)" aria-label="Delete">
+        <md-tooltip>Delete</md-tooltip>
+        <md-icon md-font-icon="fa fa-lg fa-trash"></md-icon>
+      </md-button>
+      <md-button class="action md-icon-button" ng-click="importFlow(flow.uuid)" aria-label="Import">
+        <md-tooltip>Import</md-tooltip>
+        <md-icon md-font-icon="fa fa-lg fa-plus"></md-icon>
+      </md-button>
+      <md-button class="action md-icon-button" clip-click-fallback="dialogTemplateUrl(flow.url)" clip-copy="flow.url" clip-click="toastTemplateUrl(flow.url)" aria-label="Copy Template Link">
+        <md-tooltip>Copy</md-tooltip>
+        <md-icon md-font-icon="fa fa-lg fa-copy"></md-icon>
+      </md-button>
+      <md-switch class="make-public" ng-model="flow.public" aria-label="Make Flow Public">
+          Public
+      </md-switch>
+    </div>
   </div>
   <div  class="content">
     <div class="properties-editor">
@@ -16,14 +34,6 @@
       <div class="tags">
         <a href="#" ng-repeat="tag in flow.tags" class="tag">{{tag}}</a>
       </div>
-    </div>
-    <div class="actions">
-      <md-button class="action md-icon-button" ng-click="confirmDeleteTemplate(flow.uuid)" aria-label="Delete">
-        <md-icon md-font-icon="fa fa-lg fa-trash"></md-icon>
-      </md-button>
-      <md-button class="action md-icon-button" ng-click="importFlow(flow.uuid)" aria-label="Import">
-        <md-icon md-font-icon="fa fa-lg fa-plus"></md-icon>
-      </md-button>
     </div>
   </div>
 
