--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,11 +1,16 @@
-<md-toolbar>
-  <h2 class="md-toolbar-tools page-heading" layout="row" layout-align="space-between">
-    <div flex layout="row">
-      <a href class="menu-icon" ng-click="toggleNav()">
+<md-toolbar class="templates-toolbar">
+  <div class="md-toolbar-tools">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <h3 class="page-heading">
         <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Templates
-      </a>
-    </div>
-  </h2>
+      </h3>
+    </a>
+
+    <md-input-container class="search md-icon-float">
+      <md-icon md-font-icon="fa fa-search"></md-icon>
+      <input ng-model="templateSearch">
+    </md-input-container>
+  </div>
 </md-toolbar>
 
 <div class="templates-loading-indicator" ng-show="isLoading">
