Move intercom container up

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -94,7 +94,7 @@
   <flow-node-setup  node-type="activeFlow.selectedFlowNode"></flow-node-setup>
 
   <style>
-    .container-fluid #intercom-container .intercom-launcher {
+    html body #intercom-container .intercom-launcher {
       bottom: 155px;
       right: 2px;
     }
