mass rename of templates -> bluprints

--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -39,8 +39,8 @@
           <i class="fa fa-lg fa-trash"></i>
         </md-button>
 
-        <md-button ng-click="createTemplate(activeFlow)" aria-label="Create Template">
-          <md-tooltip>Create a Template</md-tooltip>
+        <md-button ng-click="createBluprint(activeFlow)" aria-label="Create Bluprint">
+          <md-tooltip>Create a Bluprint</md-tooltip>
           <i class="fa fa-lg fa-share-alt"></i>
         </md-button>
       </div>
