--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -38,7 +38,7 @@
                 <li ui-sref-active="active"><a href ui-sref="design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
-                <li ui-sref-active="active"><a href ui-sref="material.templates"><i class="fa fa-file-text fa-lg"></i>&nbsp;Templates</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.bluprints"><i class="fa fa-file-text fa-lg"></i>&nbsp;Templates</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
             </ul>
