--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -30,9 +30,9 @@
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.templates" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.bluprints" layout="row" layout-align="start center">
         <i class="fa fa-file-text fa-lg"></i>
-        <span>Templates</span>
+        <span>Bluprints</span>
       </a>
       <a href ng-click="closeNav()" ui-sref="material.resources" layout="row" layout-align="start center">
         <i class="fa fa-book fa-lg"></i>
