--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -6,7 +6,7 @@
       </a>
       Shared Blueprints
     </div>
-    <md-button class="md-icon-button" ui-sref="material.templates" aria-label="My Templates">
+    <md-button class="md-icon-button" ui-sref="material.bluprints" aria-label="My Bluprints">
       <md-tooltip>My Blueprints</md-tooltip>
       <i class="fa fa-file-text fa-lg"></i> My Blueprints
     </md-button>
@@ -16,7 +16,7 @@
 <md-content class="browse">
   <div class="directory">
     <form class="directory__search-form">
-      <input type="text" placeholder="Search..." ng-model="templateSearch" class="directory__search-input" autofocus>
+      <input type="text" placeholder="Search..." ng-model="bluprintSearch" class="directory__search-input" autofocus>
       <button type="submit" class="directory__search-button">
         <i class="fa fa-search"></i> Search
       </button>
@@ -41,22 +41,18 @@
       <h2 class="directory__header-text">Top Liked</h2>
     </div>
 
-    <ul class="flows">
-      <li ng-repeat="flow in controller.flows | filter: {name:templateSearch}" class="flow-container" ng-click="setCurrentTemplate(flow)">
+    <ul class="bluprints">
+      <li ng-repeat="bluprint in controller.bluprints | filter: {name:bluprintSearch}" class="flow-container">
         <div class="flow md-whiteframe-z1">
           <div class="header">
             <h3 class="name">
-              {{flow.name}}
+              {{bluprint.name}}
             </h3>
             <div class="actions">
-              <md-button class="action md-icon-button" clip-click-fallback="dialogTemplateUrl(flow.url)" clip-copy="flow.url" clip-click="toastTemplateUrl(flow.url)" aria-label="Copy Template Link">
-                <md-tooltip>Copy</md-tooltip>
-                <!-- <md-icon md-font-icon="fa fa-lg fa-clipboard"></md-icon> -->
+              <md-button class="action md-icon-button" clip-click-fallback="controller.dialogBluprintUrl(bluprint.url)" clip-copy="bluprint.url" clip-click="controller.toastBluprintUrl(bluprint.url)" aria-label="Copy Link">
                 Copy
               </md-button>
-              <md-button class="action md-icon-button" ng-click="controller.importFlow(flow.uuid)" aria-label="Import Template">
-                <md-tooltip>Import</md-tooltip>
-                <!-- <md-icon md-font-icon="fa fa-lg fa-code-fork"></md-icon> -->
+              <md-button class="action md-icon-button" ng-click="controller.importBluprint(bluprint.uuid)" aria-label="Import">
                 Import
               </md-button>
             </div>
@@ -64,27 +60,27 @@
 
           <div class="content">
             <p class="description">
-              {{flow.description || "No description available."}}
+              {{bluprint.description || "No description available."}}
             </p>
 
-            <div ng-show="flow.tags" class="tags">
-              <a href="#" ng-repeat="tag in flow.tags" class="tag">{{tag}}</a>
+            <div ng-show="bluprint.tags" class="tags">
+              <a href="#" ng-repeat="tag in bluprint.tags" class="tag">{{tag}}</a>
             </div>
           </div>
           <div class="footer">
             <div class="info-group">
-              <div class="info" ng-click="controller.toggleLike(flow)" ng-class="{liked: controller.liked(flow)}">
-                <i class="fa fa-lg fa-heart"></i> {{flow.likedBy.length}}
+              <div class="info" ng-click="controller.toggleLike(bluprint)" ng-class="{liked: controller.liked(bluprint)}">
+                <i class="fa fa-lg fa-heart"></i> {{bluprint.likedBy.length}}
               </div>
 
               <div class="info">
-                <i class="fa fa-lg fa-cloud-download"></i> {{flow.sharedBy.length}}
+                <i class="fa fa-lg fa-cloud-download"></i> {{bluprint.sharedBy.length}}
               </div>
             </div>
 
             <div class="info-group">
               <div class="info author">
-                <i class="fa fa-lg fa-user"></i> {{flow.resource.owner.name || flow.resource.owner.uuid}}
+                <i class="fa fa-lg fa-user"></i> {{bluprint.resource.owner.name || bluprint.resource.owner.uuid}}
               </div>
             </div>
           </div>
