--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -30,6 +30,10 @@
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
+      <a href ng-click="closeNav()" ui-sref="material.browse" layout="row" layout-align="start center">
+        <i class="fa fa-flask fa-lg"></i>
+        <span>Discover</span>
+      </a>
       <a href ng-click="closeNav()" ui-sref="material.bluprints" layout="row" layout-align="start center">
         <i class="fa fa-file-text fa-lg"></i>
         <span>Bluprints</span>
