--- a/public/pages/bluprint-editor.html
+++ b/public/pages/bluprint-editor.html
@@ -50,7 +50,7 @@
 
     <div class="info-group">
       <div class="info author">
-        <i class="fa fa-lg fa-user"></i> {{bluprint.resource.owner.name || bluprint.resource.owner.uuid}}
+        <i class="fa fa-lg fa-user"></i> {{bluprint.ownerName}}
       </div>
     </div>
   </div>
