--- a/public/pages/bluprints.html
+++ b/public/pages/bluprints.html
@@ -2,7 +2,7 @@
   <div class="md-toolbar-tools">
     <a href class="menu-icon" ng-click="toggleNav()">
       <h3 class="page-heading">
-        <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Templates
+        <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i> Bluprints
       </h3>
     </a>
 
