--- a/public/pages/bluprint-list-item.html
+++ b/public/pages/bluprint-list-item.html
@@ -22,13 +22,13 @@
 
   <div class="footer">
     <div class="info-group">
-      <div class="info">
+      <!-- <div class="info">
         <i class="fa fa-lg fa-heart"></i> {{bluprint.likedBy.length || 0}}
       </div>
 
       <div class="info">
         <i class="fa fa-lg fa-user"></i> {{bluprint.sharedBy.length || 0}}
-      </div>
+      </div> -->
     </div>
 
     <div class="info-group">
