--- a/public/pages/shared-bluprints.html
+++ b/public/pages/shared-bluprints.html
@@ -79,13 +79,13 @@
           </div>
           <div class="footer">
             <div class="info-group">
-              <div class="info" ng-click="controller.toggleLike(bluprint)" ng-class="{liked: controller.liked(bluprint)}">
-                <i class="fa fa-lg fa-heart"></i> {{bluprint.likedBy.length}}
-              </div>
+          <!--     <div class="info" ng-click="controller.toggleLike(bluprint)" ng-class="{liked: controller.liked(bluprint)}">
+            <i class="fa fa-lg fa-heart"></i> {{bluprint.likedBy.length}}
+          </div>
 
-              <div class="info">
-                <i class="fa fa-lg fa-cloud-download"></i> {{bluprint.sharedBy.length}}
-              </div>
+          <div class="info">
+            <i class="fa fa-lg fa-cloud-download"></i> {{bluprint.sharedBy.length}}
+          </div> -->
             </div>
 
             <div class="info-group">
