--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -30,7 +30,7 @@
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="material.browse" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.discover" layout="row" layout-align="start center">
         <i class="fa fa-flask fa-lg"></i>
         <span>Discover</span>
       </a>
