Fixed logo in new profile page to be svg

--- a/public/pages/profile/new.html
+++ b/public/pages/profile/new.html
@@ -1,6 +1,6 @@
 <md-content layout="row" layout-align="center center">
   <div class="profile-card" layout="column">
-    <img class="login-octoblu-logo" src="/assets/images/octoblucirclebig.png">
+    <img class="login-octoblu-logo-small" src="https://s3-us-west-2.amazonaws.com/octoblu-icons/device/gateblu.svg">
 
     <h1 class="profile-header">Profile Information:</h1>
 
