--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -4,13 +4,13 @@
       <i class="fa fa-bars" ng-hide="isNavLockedOpen()"></i>
     </a>
 
-    <span>Import: {{template.name}}</span>
+    <span>Import: {{bluprint.name}}</span>
   </h2>
 </md-toolbar>
 
 <div layout="column" layout-fill flex class="flow-image-but-really-the-flow" ng-class="{importing: importing}">
   <div flex layout="column">
-    <flow-editor flow="template.flow" readonly="true"></flow-editor>
+    <flow-editor flow="bluprint.flow" readonly="true"></flow-editor>
 
     <md-button class="md-fab md-primary"  style="position:fixed; bottom: 260px; right: 28px" ng-click="import()" title="Import" ng-class="{importing: importing}" aria-label="import">
       <i class="fa fa-cloud-download fa-2x"></i>
@@ -27,5 +27,3 @@
     </md-content>
   </div>
 </div>
-
-
